--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -17,6 +17,11 @@ html {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background: $background;
+  color: $background;
+}
+
+.body {
+  background-color: $body-color;
 }
 
 .main {
